--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.3",
     "express-fileupload": "^1.4.3",
     "mongoose": "^8.2.1",
+    "node-mailer": "^0.1.1",
     "nodemon": "^3.1.0"
   }
 }
